# jee-problem-generator

./: .gitignore  README.md  main.py  output_gemini.md  output_kimi.md  output_qwen.md  pyproject.toml  requirements.txt  vercel.json
app/: llm_router.py  rag.py
chroma_db/59a92840-daac-4b6f-bf80-fc0a74fbe357/: index_metadata.pickle
chroma_db/9b0eda45-f001-497b-b644-cda558dbbc44/: index_metadata.pickle
chroma_db/c094d31b-a8e6-4338-a7a2-063377629b02/: index_metadata.pickle
