[project]
name = "rag-jee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
