[project]
name = "rag-jee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.139.0",
    "google-genai>=2.10.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.44.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
]
